Alignment Fixed

--- a/src/Components/Theming.css
+++ b/src/Components/Theming.css
@@ -12,6 +12,6 @@
     --light: #f8f9fa;
     --dark:#343a40;
     --dull:#000;
-    --main: "Eudoxus Sans, sans-serif";
+    --main: "Eudoxus Sans";
     --basic:'Inter, sans-serif';
   }
